--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "jobs": "pnpm dlx trigger.dev@beta dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@trigger.dev/react": "3.0.0-beta.35",
+    "@trigger.dev/sdk": "3.0.0-beta.35",
+    "assemblyai": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "next-safe-action": "^6.2.0",
+    "next-themes": "^0.3.0",
+    "nuqs": "^1.17.4",
+    "openai": "^4.47.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
