--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "jobs": "pnpm dlx trigger.dev@beta dev"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.18",
     "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@trigger.dev/react": "3.0.0-beta.35",
     "@trigger.dev/sdk": "3.0.0-beta.35",
+    "ai": "^3.1.22",
     "assemblyai": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
